# jarvis

./: .editorconfig  .envrc  .gitignore  AGENTS.md  CODING_RULES.md  CONTRIBUTING.md  Cargo.toml  JARVIS-TUI-DESIGN.md  LICENSE  NIX-PUBLISHING.md  QUICKSTART.md  README.md  SECURITY.md  TESTING.md  devbox.json  flake.nix  install.sh  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  bump-version.yml  ci.yml  flakehub.yml  homebrew-deploy.yml  lint.yml  release-build.yml  release-version-sync.yml  release.yml  security-audit.yml  test.yml
assets/: .gitkeep
example/: Makefile  Taskfile.yml  devbox.json  example.sh  justfile  test_scroll.sh
example/bazel/: BUILD  WORKSPACE  hello.c  hello_test.c
example/cargo-demo/: Cargo.toml
example/cargo-demo/examples/: basic.rs
example/cargo-demo/src/: main.rs
example/github-actions/: README.md
example/github-actions/.github/workflows/: build.yml  deploy.yml  hello.yml  lint.yml  pr-check.yml
example/gradle/: build.gradle
example/jarvis/: annotations_demo.sh  ✅ example.sh
example/node/: node_scripts.sh  package.json
example/nx/: nx.json  package-lock.json  package.json  project.json
example/scripts/: example_file.sh
example/terraform/: main.tf  outputs.tf  variables.tf
homebrew/: jarvis.rb
jarvis/: README.md  example.sh
scripts/: example.sh  update-formula.sh
src/: lib.rs  main.rs
src/script/: bazel_parser.rs  cargo_parser.rs  devbox_parser.rs  discovery.rs  executor.rs  github_actions_parser.rs  gradle_parser.rs  just_parser.rs  mage_parser.rs  makefile_parser.rs  mod.rs  npm_parser.rs  nx_parser.rs  parser.rs  task_parser.rs  terraform_parser.rs  utils.rs
src/ui/: app.rs  config.rs  mod.rs  pty_runner.rs  render.rs  terminal_widget.rs  theme.rs
src/usage/: mod.rs  storage.rs
tests/: app_state_tests.rs  cli_tests.rs  key_handling_tests.rs
