[package]
name = "jarvis-tui"
version = "0.1.7"
edition = "2021"
authors = ["Luckystrike561"]
description = "A beautiful TUI for managing and executing scripts with zero configuration"
license = "MIT"
repository = "https://github.com/Luckystrike561/jarvis"
homepage = "https://github.com/Luckystrike561/jarvis"
readme = "README.md"
keywords = ["tui", "terminal", "scripts", "bash", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "jarvis"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
regex = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
