[package]
name = "jarvis-tui"
version = "0.1.14"
edition = "2021"
authors = ["Luckystrike561"]
description = "A beautiful TUI for managing and executing scripts with zero configuration"
license = "MIT"
repository = "https://github.com/Luckystrike561/jarvis"
homepage = "https://github.com/Luckystrike561/jarvis"
readme = "README.md"
keywords = ["tui", "terminal", "scripts", "bash", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "jarvis"
path = "src/lib.rs"

[[bin]]
name = "jarvis"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
regex = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.9"
vt100 = "0.16"
base64 = "0.22"

# Clippy lint configuration
# Run: cargo clippy
# These lints are enforced in CI via `devbox run check`
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Deny: these will fail the build — bugs or serious code smells
unwrap_used = "deny"

# Warn: correctness and style improvements
redundant_closure_for_method_calls = "warn"
inefficient_to_string = "warn"
cloned_instead_of_copied = "warn"
needless_pass_by_value = "warn"
implicit_clone = "warn"
semicolon_if_nothing_returned = "warn"
manual_string_new = "warn"
doc_markdown = "warn"

[dev-dependencies]
catppuccin = "2.6"
tempfile = "3"
